# Janki

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  agents.md  biome.json  components.json  index.html  instructions.md  llms.txt  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: bp-audit.md  settings.json
data/: deck-analysis.json  field-mappings.json
scripts/: README.md  analyze-decks.mjs  assign-grammar-groups.mjs  build-language-db.mjs  build-language-levels.mjs  cleanup-fjsd-vocab.py  enrich-all.mjs  enrich-frequency.mjs  enrich-jmdict.mjs  enrich-kanjiapi.mjs  tag-sentence-jlpt.mjs  wk-api-export.mjs
src/: App.svelte  CLAUDE.md  app.css  main.ts
src-tauri/: CLAUDE.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
tasks/: cozy-tickling-seal.md  delegated-pondering-gosling.md  distributed-knitting-flamingo.md  ethereal-percolating-lerdorf.md  ethereal-sauteeing-cosmos.md  foamy-jingling-waffle.md  generic-wiggling-kernighan.md  handoff-language-rebuild.md  handoff-phase2-srs.md  handoff-phase3-ui.md  handoff-phase4-polish.md  handoff-phase5-complete.md  handoff-phase5-ship.md  hidden-puzzling-wozniak.md  indexed-napping-shamir.md  inherited-squishing-mist.md  language-levels-proposal.html  language-section-testing.md  lazy-seeking-pinwheel.md  levels-page-handoff.md  linear-riding-patterson.md  linear-sprouting-wilkinson.md  nifty-sprouting-trinket.md  phase2-handoff.md  plan-repo.md  purrfect-cooking-zephyr.md  radiant-snuggling-wreath.md  (+4 more)
(+193 files in other folders)
